fix object item board color for piority 30

--- a/webroot/rsrc/css/phui/phui-object-item-list-view.css
+++ b/webroot/rsrc/css/phui/phui-object-item-list-view.css
@@ -391,6 +391,10 @@
   border-left-color: {$violet};
 }
 
+.phui-object-item-bar-color-pink {
+  border-left-color: {$pink};
+}
+
 .phui-object-item-bar-color-grey {
   border-left-color: #bdc3c7;
 }
