--- a/webroot/rsrc/css/phui/phui-object-item-list-view.css
+++ b/webroot/rsrc/css/phui/phui-object-item-list-view.css
@@ -513,11 +513,9 @@ ul.phui-object-item-icons {
 
 .phui-object-item-foot-icon {
   display: inline-block;
-  background: {$lightgreyborder};
-  color: #ffffff;
   font-weight: bold;
   margin-right: 3px;
-  padding: 3px 6px 0;
+  padding: 0 0 4px;
   height: 17px;
   vertical-align: middle;
   position: relative;
